--- a/Demoproject/public/css/custom.css
+++ b/Demoproject/public/css/custom.css
@@ -2765,9 +2765,9 @@ pre code {
     margin-left: 8.33333333%;
   }
 
-  .col-md-offset-2 {
+  /* .col-md-offset-2 {
     margin-left: 16.66666667%;
-  }
+  } */
 
   .col-md-offset-3 {
     margin-left: 25%;
@@ -3330,7 +3330,7 @@ label {
   max-width: 100%;
   margin-bottom: 5px;
   font-weight: 300;
-  font-size: 30px;
+  font-size: 25px;
   float: left;
   line-height: 29px;
   padding-left: 14%;
@@ -3340,7 +3340,7 @@ label {
 	max-width: 100%;
 	margin-bottom: 5px;
 	font-weight: 300;
-	font-size: 30px;
+	font-size: 25px;
 	float: left;
 	line-height: 80px;
 	padding-left: 14%;
@@ -5737,7 +5737,8 @@ tbody.collapse.in {
     /* padding: 18px 15px 8px 24px; */
 	position: relative;
 	font-family: 'Roboto',sans-serif;
-	top: 5px;
+	top: 11px;
+    line-height: 14px;
 }
 
 .navbar-default .navbar-nav > li > a:hover,
@@ -7152,6 +7153,7 @@ button.list-group-item-danger.active:focus {
   background-color: #fff;
   border-color: #d3e0e9;
   font-size: 35px;
+  font-weight: 500;
 }
 
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
@@ -8392,7 +8394,7 @@ button.close {
 }
 .hero-banner-block{
   /* position: relative; */
-    padding: 100px 0 180px;
+    padding: 70px 0 180px;
 	overflow: hidden;
 	height: 700px;
 }
@@ -8433,6 +8435,7 @@ button.close {
 }
 .preview-image{
   margin-top: 30px;
+  float: left;
 }
 .preview-image img {
     width: 350px;
@@ -8497,4 +8500,41 @@ button.close {
 .category_check li {
   width: auto;
   padding-right: 25px;
+}
+
+.image_wrapper{
+  background-image: url('../images/about_1.gif');
+  width: 500px;
+    height: 314px;
+    top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background-repeat: no-repeat;
+	background-position: center;
+  background-size: cover;
+}
+
+.logintext{
+  font-size: 35px;
+}
+.wrapper{
+
+  padding-top: 150px;
+  font-size: 35px;
+  font-weight: 400;
+  text-align: end;
+}
+.user_details
+{
+    background-color: #ffffff;
+    border-color: #d3e0e9;
+    width: 100%;
+    z-index: 9999;
+    /* top: 0; */
+    left: 0;
+    background: #fff;
+    box-shadow: 0px -2px 16px 5px rgba(0,0,0,.05);
+	-webkit-box-shadow: 0px -2px 16px 5px rgba(0,0,0,.05);
+	font-family: Roboto, sans-serif;
 }
