--- a/Demoproject/public/css/custom.css
+++ b/Demoproject/public/css/custom.css
@@ -5494,7 +5494,7 @@ tbody.collapse.in {
 
 .navbar-nav {
   margin: 7px -15px;
-  padding-left: 35%;
+  padding-left: 20%;
 }
 
 .navbar-nav > li > a {
@@ -8527,6 +8527,7 @@ button.close {
 }
 .user_details
 {
+	height: 112px;
     background-color: #ffffff;
     border-color: #d3e0e9;
     width: 100%;
@@ -8537,4 +8538,13 @@ button.close {
     box-shadow: 0px -2px 16px 5px rgba(0,0,0,.05);
 	-webkit-box-shadow: 0px -2px 16px 5px rgba(0,0,0,.05);
 	font-family: Roboto, sans-serif;
+}
+.logout_btn{
+    float: left;
+    margin: 12px 0 0 27px;
+}
+.login_user{
+    font-size: 35px;
+    padding-left: 90px;
+    font-weight: 500;
 }
